2009-11-06  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added Java-side support for delivering "context resources" 
	through JSON, using the special "__json/" page name. 

2009-11-03  Martin Leidig  <mleidig@schlund.de>

	Added support for using ant-style patterns to specify overridden module
	resources in module descriptor.

	Example:
	<override-modules>
	  <module name="amodule">
	    <!-- all XML files from txt folder: -->
	    <resource path="txt/*.xml"/>
	    <!-- all XSL files from xsl folder or arbitrary subfolders: -->
	    <resource path="xsl/**/*.xsl"/>
	  </module>
	</override-modules>

2009-10-09  Sebastian Marsching <sebastian.marsching@1und1.de>

	Create a Spring bean for the default state, to make injection
	available to the default state.

2009-09-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added extension points for scripted flows.

	Added extension points for context interceptors.

2009-09-18  Sebastian Marsching <sebastian.marsching@1und1.de>

	Made Pustefix context available in modules.

	Fixed URI handling in pfx:image.

2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added support for includepart scheme.

	Added extension points for static resource and rewrote 
	DocrootRequestHandler to use new resource system.

2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed config-include support.

	Added extension point support for direct output pages

2009-08-07  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed old PustefixWebApplicationContext.

	Added extension point support for page request process actions.

	Removed "ResdocFinalizer".

	Added extension point support for input wrappers.

	Removed PropertyObjectManager.

2009-08-05  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request output resource extension points.

2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request extension points.
